# Crop-Stress-Detection

./: .gitignore  README.md  pyproject.toml
configs/: dataset.yaml  paths.yaml  train.yaml  visualization.yaml
notebooks/: experimentation.ipynb
scripts/: analyze_labels.py  benchmark_loading.py  create_splits.py  generate_pseudo_labels.py  inspect_patch.py  test_dataloader.py  test_paths.py  validate_dataset.py  validate_training_data.py
splits/: all_labels.csv  test.csv  train.csv  val.csv
src/datasets/: collate.py  sample.py  sen12ms.py
src/indices/: vegetation.py
src/models/: cnn.py
src/preprocessing/: clipping.py  normalize.py  tensor.py  transform.py
src/utils/: io.py  metadata.py  paths.py
src/visualization/: bands.py  histograms.py  lc.py  ndvi.py  rgb.py  sar.py
training/: sanity_train.py
