[project]
name = "crop-stress-detection"
version = "0.1.0"
description = "Geospatial crop stress detection infrastructure"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
]
